--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koc-common-sleep",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "koc-common-sleep",
   "main": "dist/index.js",
   "scripts": {
@@ -28,5 +28,8 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.26.0"
   }
 }
